feat(docker): add native jpeg-xl library for arm64