@@ -25,18 +25,18 @@ RUN apt -y update && \
     apt -y remove wget software-properties-common && apt -y autoremove && rm -rf /var/lib/apt/lists/*
 ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/lib/x86_64-linux-gnu"
 
-# arm64 builder: uses ubuntu23.10 which has libheif 1.16
-FROM ubuntu:23.10 as build-arm64
+# arm64 builder
+FROM ubuntu:24.10 as build-arm64
 ENV JAVA_HOME=/opt/java/openjdk
-COPY --from=eclipse-temurin:21-jre $JAVA_HOME $JAVA_HOME
+COPY --from=eclipse-temurin:23-jre $JAVA_HOME $JAVA_HOME
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
 RUN apt -y update && \
-    apt -y install ca-certificates locales libheif-dev libwebp-dev libarchive-dev wget && \
+    apt -y install ca-certificates locales libjxl-dev libheif-dev libwebp-dev libarchive-dev wget curl && \
     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen en_US.UTF-8 && \
     wget "https://github.com/pgaskin/kepubify/releases/latest/download/kepubify-linux-arm64" -O /usr/bin/kepubify && \
     chmod +x /usr/bin/kepubify && \
-    apt -y remove wget && apt -y autoremove && rm -rf /var/lib/apt/lists/*
+    apt -y autoremove && rm -rf /var/lib/apt/lists/*
 ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu"
 
 # arm builder: uses temurin-17, as arm32 support was dropped in JDK 21
@@ -57,6 +57,6 @@ COPY --from=builder /builder/extracted/snapshot-dependencies/ ./
 COPY --from=builder /builder/extracted/application/ ./
 ENV KOMGA_CONFIGDIR="/config"
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
-ENTRYPOINT ["java", "-Dspring.profiles.include=docker", "--enable-preview", "--enable-native-access=ALL-UNNAMED", "-jar", "application.jar", "--spring.config.additional-location=file:/config/"]
+ENTRYPOINT ["java", "-Dspring.profiles.include=docker", "--enable-native-access=ALL-UNNAMED", "-jar", "application.jar", "--spring.config.additional-location=file:/config/"]
 EXPOSE 25600
 LABEL org.opencontainers.image.source="https://github.com/gotson/komga"
